tests/baselines/reference/tsxSpreadInvalidType.errors.txt
a.tsx(9,21): error TS2698: Spread appears unintentional because this value is not possibly an object.
a.tsx(10,21): error TS2698: Spread appears unintentional because this value is not possibly an object.
a.tsx(11,21): error TS2698: Spread appears unintentional because this value is not possibly an object.


==== a.tsx (3 errors) ====
    namespace JSX {
        export interface IntrinsicElements { [key: string]: any }
    }
    
    const a = {} as never;
    const b = null;
    const c = undefined;
    
    const d = <div { ...a } />
                        ~
!!! error TS2698: Spread appears unintentional because this value is not possibly an object.
    const e = <div { ...b } />
                        ~
!!! error TS2698: Spread appears unintentional because this value is not possibly an object.
    const f = <div { ...c } />
                        ~
!!! error TS2698: Spread appears unintentional because this value is not possibly an object.
    